--- a/SDLPlayground.vcxproj
+++ b/SDLPlayground.vcxproj
@@ -147,6 +147,8 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="dependencies\include\shaders\lampshader.fs" />
+    <None Include="dependencies\include\shaders\lampshader.vs" />
     <None Include="dependencies\include\shaders\shader.fs" />
     <None Include="dependencies\include\shaders\shader.vs" />
   </ItemGroup>
